# Rust-Graphix

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-analyzer.toml
src/: main.rs
src/Matrix/: mat2.rs  mat3.rs  mod.rs
src/vectors/: mod.rs  vec2.rs  vec3.rs
